# candle

./: Cargo.toml
.github/workflows/: ci_cuda.yaml  ci_metal.yaml
candle-awq-kernels/: Cargo.toml  build.rs
candle-awq-kernels/src/: lib.rs  metal.rs
candle-fp8-kernels/: Cargo.toml  build.rs
candle-fp8-kernels/kernels/: fp8_gemm.cu
candle-fp8-kernels/src/: lib.rs  metal.rs
candle-gptq-kernels/: Cargo.toml  build.rs
candle-gptq-kernels/kernels/: gptq_gemm.cu
candle-gptq-kernels/src/: ffi.rs  lib.rs  marlin.rs  metal.rs
candle-nn/src/: lib.rs  lora.rs
candle-nn/src/attention/: paged.rs
candle-nn/tests/: paged_attention.rs
candle-transformers/: Cargo.toml
candle-transformers/src/: lib.rs  quantized_awq.rs  quantized_fp8.rs  quantized_gptq.rs  utils.rs
candle-transformers/src/generation/: mod.rs
candle-transformers/src/models/: gptq_qwen2.rs  llama.rs  mod.rs
